--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -6,6 +6,15 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#484e61">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch_city"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:text="切换城市"
+            android:background="#484e61"
+            android:textColor="#fff"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -13,6 +22,16 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/refresh_weather"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="#484e61"
+            android:textColor="#fff"
+            android:text="刷新"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
